# ece-579-foodie-by-tiferet

./: AGENTS.md  README.md  REPORT.md  campus.yml  config.yml  foodie.db  foodie.py  foodie_cli.py  locations.yml  menu.yml  pyproject.toml
docs/guides/domain/: bag.md  beverage.md  item.md  location.md  order.md  robot.md
docs/guides/events/: bag_order.md  place_order.md  plan_route.md  seed_database.md  select_beverage.md
docs/guides/interfaces/: bagging.md  beverage.md  beverage_select.md  (+5 more)
foodie/builders/: __init__.py
foodie/contexts/: __init__.py
foodie/domain/: item.py  order.py  robot.py
foodie/events/: plan_route.py
foodie/interfaces/: __init__.py  order.py
foodie/mappers/: __init__.py  beverage.py  location.py
foodie/repos/: __init__.py  bag.py  item.py  order.py  robot.py
src/: __init__.py
src/assets/: __init__.py  beverage.py
src/builders/: foodie.py
src/contexts/: bagger.py  beverage.py  foodie.py  route_planner.py
src/domain/: __init__.py  bag.py  beverage.py  item.py  location.py  order.py  robot.py
src/events/: __init__.py  bag_order.py  migrate.py  order.py  plan_route.py  robot.py  seed_data.py  seed_database.py  select_beverage.py
src/interfaces/: __init__.py  bag.py  bagging.py  beverage.py  beverage_select.py  item.py  location.py  order.py  robot.py  route_planner.py
src/mappers/: __init__.py  bag.py  beverage.py  item.py  location.py  order.py  robot.py
src/repos/: __init__.py  beverage.py  item.py  location.py  order.py  robot.py
src/utils/: __init__.py  backward_chain_selector.py  bagger.py  route_planner.py
(+43 files in other folders)
