[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "foodie"
dynamic = ["version"]
description = "Food Intelligence Electrified — AI expert system for campus food-delivery robots"
requires-python = ">=3.10"
dependencies = [
    "tiferet==2.0.0b1",
]

[tool.setuptools.dynamic]
version = {attr = "src.__version__"}
